Fix mixin bug / Added text alignment support

--- a/scss/mixins/_display.scss
+++ b/scss/mixins/_display.scss
@@ -52,7 +52,7 @@
         @include make-display($makes, $bp-name);
       }
     } @else {
-      @include media-breakpoint-between($bp-name, $next, $bps) {
+      @include media-breakpoint-between($bp-name, $bp-name, $bps) {
         @include make-display($makes, $bp-name);
       }
       $bp-name-down: #{$bp-name}-down;
